cmake: use CXX flags from environment
instead of the `CMAKE_CXX_FLAGS` defined as an environmental variable to the `cmake` command, the internal but not yet set `CMAKE_CXX_FLAGS` variable is used when setting this very variabale. That is most probably a bug.

Flags can now be set in the environment and used will be used by `cmake`.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -131,9 +131,9 @@ ELSE()
 ENDIF()
 
 IF(WANT_DEBUG)
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
+	SET(CMAKE_CXX_FLAGS "$ENV{CMAKE_CXX_FLAGS} -O0")
 ELSE()
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -ffast-math")
+	SET(CMAKE_CXX_FLAGS "$ENV{CMAKE_CXX_FLAGS} -O3 -ffast-math")
 ENDIF()
 
 IF (NOT CMAKE_CXX_COMPILER_ID MATCHES "Clang")
