--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -138,6 +138,8 @@ for:
     build_script: |-
       git submodule init && git submodule update
 
+      export CMAKE_CXX_FLAGS="-fstrict-enums -fstack-protector-strong -Werror=format-security -Wformat -Wunused-result -D_FORTIFY_SOURCE=2 -Wall -Wextra"
+
       CPUS=$(nproc)
       echo "Building with $CPUS cpus"
       mkdir build && cd build && \
