AppVeyor: tweak Linux compiler flags
for test purposes `-Wall` and `-Wextra` were included (in order to verify the flags are actually used in the pipeline). However, in productive use they produce waaay too much output.

All flags tests on `gcc` 10.2.1 and `clang` 11.0.1

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -138,7 +138,7 @@ for:
     build_script: |-
       git submodule init && git submodule update
 
-      export CMAKE_CXX_FLAGS="-fstrict-enums -fstack-protector-strong -Werror=format-security -Wformat -Wunused-result -D_FORTIFY_SOURCE=2 -Wall -Wextra"
+      export CMAKE_CXX_FLAGS="-fstrict-enums -fstack-protector-strong -Werror=format-security -Wformat -Wunused-result -D_FORTIFY_SOURCE=2"
 
       CPUS=$(nproc)
       echo "Building with $CPUS cpus"
