--- a/linux/org.hydrogenmusic.hydrogen.releases.xml.in
+++ b/linux/org.hydrogenmusic.hydrogen.releases.xml.in
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="UTF-8"?>
 <releases>
   <release version="1.2.1" date="2023-06-08">
 	<description>
