--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -315,6 +315,10 @@ for:
         sudo make install || exit 1
         cd ..
 
+        # Ensure LinuxDeploy will pick up the newer version of the library
+        sudo rm /usr/lib/x86_64-linux-gnu/libsndfile.so.1 || exit 1
+        sudo ln -s /usr/local/lib/libsndfile.so /usr/lib/x86_64-linux-gnu/libsndfile.so.1 || exit 1
+
         # liblo version shipped in Ubuntu 16.04 is to low for Hydrogen
         # to compile.
         git clone https://github.com/radarsat1/liblo || exit 1
@@ -386,7 +390,6 @@ for:
       ## on system level.
       cp /usr/local/lib/libssl.so.1.1 AppDir/usr/lib || exit 1
       cp /usr/local/lib/libcrypto.so.1.1 AppDir/usr/lib || exit 1
-
       LD_LIBRARY_PATH=AppDir/usr/lib/x86_64-linux-gnu/:AppDir/usr/lib:$HOME/Qt/5.15.2/gcc_64/lib ./linuxdeploy-x86_64.AppImage \
         --appdir AppDir \
         --executable AppDir/usr/bin/hydrogen \
